# shrike

./: .gitignore  README.md  pyproject.toml
bench/: SPEC.md  ablation.py  baselines.py  bench_engine.py  compare_vllm.md  load_gen.py  plots.py  prompts.py  workload.py
bench/results/: ablation.json  chunked_off.json  chunked_on.json  h2h_shrike.json  h2h_shrike_triton.json  h2h_vllm.json  results.json  stag_chunked_off.json  stag_chunked_on.json
garuda/: CLI_SPEC.md  cli.py
garuda/engine/: block_manager.py  engine.py  model_runner.py  request.py  sampler.py  scheduler.py
garuda/models/: qwen.py
garuda/server/: api.py  async_engine.py
scripts/: chat.py  download_model.py
shrike/: CLI_SPEC.md  cli.py
shrike/engine/: block_manager.py  engine.py  model_runner.py  request.py  sampler.py  scheduler.py  spec_ngram.py  triton_attention.py
shrike/server/: api.py  async_engine.py
tests/: test_block_manager.py  test_paged.py  test_parity.py  test_review_regressions.py  test_triton_attention.py
